<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="16dp"
    android:layout_marginEnd="16dp"
    android:layout_marginBottom="16dp"
    android:layout_marginStart="16dp">

    <Spinner
        android:id="@+id/odabirGodina"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp" />

    <Spinner
        android:id="@+id/odabirIstrazivanja"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/odabirGodina"
        android:layout_marginTop="25dp"

        />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/odabirGrupa"
        android:layout_below="@+id/odabirIstrazivanja"
        android:layout_marginTop="25dp"
        />

    <Button
        android:id="@+id/dodajIstrazivanjeDugme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/odabirGrupa"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:text="Upiši me" />



</RelativeLayout>